--- a/config/cluster-network-03-config.yml
+++ b/config/cluster-network-03-config.yml
@@ -15,4 +15,6 @@ spec:
   defaultNetwork:
     type: OVNKubernetes
     ovnKubernetesConfig:
+      mtu: 1400
+      genevePort: 6081
       ipsecConfig: {}
